<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ADUC</string>
    <string name="uni_name">ALDAR University</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="map_apikey">AIzaSyAepQhzH42X9rObxzFGXMLp6iXsbt2xZlI</string>
    <string name="dashboard">Student Dashboard</string>
    <string name="support">Expert Support</string>
    <string name="support_text">You can call, chat, or email us!</string>
    <string name="major">Major</string>
    <string name="image">Image</string>
    <string name="go">Go</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment">Online Payment</string>
    <string name="studt_id">Student ID *</string>
    <string name="id">ID</string>
    <string name="program">Program</string>
    <string name="balance">Current Balance</string>
    <string name="payment_against">Payment</string>
    <string name="other">Others</string>
    <string name="cheques">Against Cheque</string>
    <string name="amount">amount *</string>
    <string name="note">Note *</string>
    <string name="agree">Agree with the terms and conditions</string>
    <string name="portal">Portal</string>
    <string name="faq">FAQ</string>
    <string name="download_boucher">Brochure</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_academic">Academics</string>
    <string name="menu_campus">Campus Life</string>
    <string name="menu_login">Login</string>
    <string name="academic">Academic calendar</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="save">save</string>
    <string name="logout_text">Are you sure to logout ?</string>
    <string name="verify">Verify</string>
    <string name="forgot_text">We will send an email and Message, ensure its your personal and correct Username ID</string>
    <string name="verify_text">We have sent you the code on the Phone Number and email you provided, please verify yourself.</string>
    <string name="change_password_text">Please change your password here make sure the password is easy to remember</string>
    <string name="request">I request to convert the actual grade of the following course(s) to a Pass/Fail grade.</string>
    <string name="studnet_name">Student Name</string>
    <string name="student_info">STUDENT INFORMATION</string>
    <string name="student_course">Programe</string>
    <string name="first_name">Name</string>
    <string name="concentration">Concentration</string>
    <string name="select_semester">Select Semester</string>
    <string name="selected_course_advise">الحالة الاكاديمية</string>
    <string name="your_marks">الدرجات</string>
    <string name="instructor_msg">Messages From\nInstructors</string>
    <string name="compose_write">Compose/Write Mail</string>
    <string name="financial_statement">الحسابات</string>
    <string name="profile_statement">ملف الطالب</string>
    <string name="announcement">Announcement</string>
    <string name="notificaion">Notification</string>
    <string name="add_drop">Add Drop</string>
    <string name="check">Check</string>
    <string name="announcement_text">Latest announcement\nآخر الأخبار</string>
    <string name="faq_text">Frequently Asked Questions\nالأسئلة المتكررة</string>
    <string name="feedback">Your feedback helps enhance the ALDAR Experience\nيرجى مشاركتنا بملاحظاتك</string>
    <string name="books_available">Books Available In Library</string>
    <string name="search_books">Search book by!</string>
    <string name="digital_lib">Digital Library</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="current_balance">Current Balance</string>
    <string name="hi">Hi</string>
    <string name="your_feedback">Your feeback will be highly appreciated</string>
    <string name="your_message">Your message</string>
    <string name="your_courses">Your courses</string>
    <string name="click_to_register">Click to Register Courses</string>
    <string name="my_inbox">My Inbox</string>
    <string name="comments">Comments</string>
    <string name="ratting">Ratting</string>
    <string name="submit">Submit</string>
    <string name="share_feedback">Send Feedback</string>
    <string name="request_call">Request a call back</string>
    <string name="mobile">Mobile No :</string>
    <string name="edit">Edit</string>
    <string name="telephone">Telephone No :</string>
    <string name="phone">Phone</string>
    <string name="email">Email :</string>
    <string name="inquire_us">Inquire Us</string>
    <string name="contact_info">CONTACT INFORMATION</string>
    <string name="school_name">High School Name :</string>
    <string name="school_adress">High School Address :</string>
    <string name="awarded_score">Awarded Score :</string>
    <string name="graduation_year">Graduation Year :</string>
    <string name="high_school">HIGH SCHOOL</string>
    <string name="visa_no">Visa Number :</string>
    <string name="emirate_id">Emirate ID :</string>
    <string name="visa_expiry">Visa Expiry Date :</string>
    <string name="visa_issue_date">Visa Issue Date :</string>
    <string name="visa_info">VISA INFORMATION</string>
    <string name="nationality">Nationality :</string>
    <string name="marital_status">Marital Status :</string>
    <string name="gender">Gender :</string>
    <string name="dob">Date Of Birth :</string>
    <string name="advisor_academic">Academic Advisor :</string>
    <string name="arabic_name">Arabic Student Name :</string>
    <string name="std_name">Student Name :</string>
    <string name="name">Name</string>
    <string name="std_id">Student ID :</string>
    <string name="sections">Please Select section</string>
    <string name="instructor">Instructor Name</string>
    <string name="subject">Subject :</string>
    <string name="message">Message :</string>
    <string name="send">Send</string>
    <string name="register_course">Registered courses</string>
    <string name="available_course">Available courses</string>
    <string name="aldar_today">ALDAR Today</string>
    <string name="learn_more">Learn more about ALDAR University</string>
    <string name="news_event">ALDAR News &amp; Events</string>
    <string name="no_data">No Data Exist in this semester</string>
    <string name="not_exist">No data exist!</string>
    <string name="computer_school">School Of Engineering &amp; Technology</string>
    <string name="computer_text">We are proud to offer a wide range of accredited programs in Engineering and Technology that will equip students with the knowledge needed to pursue the career</string>
    <string name="business_school">School Of Business Administration</string>
    <string name="business_text">The School of Business Administration (SBA) at ADUC caters to the need of multicultural workforce in the field of Business and Management.</string>
    <string name="art_school">School Of Arts And Social Sciences</string>
    <string name="art_text">The School of Arts and Social Sciences (SBA) at ADUC caters to the need of multicultural workforce in the field of Business and Management.</string>
    <string name="no_internet">Something went wrong please try again later or check your internet</string>
    <string name="zoom_welcome" tools:ignore="TypographyDashes">You are welcome to communicate with our admission team live on Zoom ID: 971-971-7777\nany Time  from 10:00AM till 4:00PM, Saturday to Thursday</string>
    <string name="campus_life">Campus life at ALDAR University College, enjoys the benefits of an urban campus
        as it is located in the heart of the historic business district of Dubai. Movie theaters, shopping centers,
        banks, restaurants, and other facilities are located in the vicinity of the College.\n\n
        The College is situated near the Deira City Centre Metro Station and the GGICO Metro Station. Students commuting from all
        over Dubai have an easy access to the College. Transportation services are provided by the College to major locations in the Northern Emirates.\n\n
        <b>ALDAR University College provides students with the following facilities to enhance their learning experience:</b>\n\n
        Library, fully equipped with books, e-books, journals, magazines, online databases, CDs/DVDs, multimedia rooms, discussion rooms, computers workstations,
        wireless Internet connection, scanning, photocopying, and printing services provides faculty and students a conducive environment for their scholarlyactivities.
        Classrooms and computer laboratories are equipped with smart interactive boards and state-of-the-art workstations.
        Students have access to a spacious lounge to conduct their various extra-curricular activities in a convenient and friendly spot.\n\n
        The College also provides ample parking space with three basement floors.\n</string>
    <string name="ieee_text">
        IEEE is the world’s largest technical professional organization dedicated to advancing technology for the benefits of humanity.
        IEEE and its members inspire a global community to innovate for a better tomorrow through its highly cited publications, conferences,
        technology standards, and professional and educational activities. IEEE is the trusted “voice” for engineering, computing, and technology
        information around the globe.\n\n
        ALDAR IEEE student’s branch was established in 2015 and is led by a committed team of students and faculty from the school of Engineering
        and Technology (SET).\n\n
        Its main purpose is to give students the opportunity to be a part of professional community, get exposed to the technological advancement
        and educational aspects occurring worldwide.\n\n
        <b>Students of the IEEE student branch conduct the following activities:</b>\n\n
        Formulate technical workshops and competitions
        Regulate professional networking through participation in technical events, international conferences and seminars
        Participate in international competitions and enhance the technical knowledge and skills of students in SET
        Coordinate with and organize trips to companies in related fields.
        Encourage IEEE members to connect with local IEEE Sections, share individual benefits and gain volunteering skills\n\n
        To become an IEEE member, you can contact an executive committee member through the following contacts:\n
    </string>
</resources>