<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aldar.studentportal.ui.fragments.navigations.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_admission"
        android:name="com.aldar.studentportal.ui.fragments.navigations.AdmissionFragment"
        android:label="@string/menu_admission"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_academic"
        android:name="com.aldar.studentportal.ui.activities.common.academics.AcademicFragment"
        android:label="@string/menu_academic"
        tools:layout="@layout/fragment_academic" />

    <fragment
        android:id="@+id/nav_campus"
        android:name="com.aldar.studentportal.ui.fragments.navigations.campusLife.CampusFragment"
        android:label="@string/menu_campus"
        tools:layout="@layout/fragment_campus" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.aldar.studentportal.ui.fragments.navigations.ContactUsFragment"
        tools:layout="@layout/contact_us_fragment"
        android:label="Contact Us"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.aldar.studentportal.ui.fragments.navigations.AboutUsFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_about_us" />




    <activity
        android:id="@+id/nav_login"
        tools:layout="@layout/activity_login"
        android:label="@string/menu_login"
        android:name="com.aldar.studentportal.ui.studentPortal.activities.LoginSignUpActivity"/>




</navigation>