<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_background"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/logout_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standarize_spacing"
        android:layout_marginBottom="@dimen/standarize_spacing"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/standarize_spacing"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_weight="1"
            android:background="@drawable/round_black"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/standarize_spacing"
            android:layout_marginEnd="@dimen/standarize_spacing"
            android:layout_weight="1.7"
            android:textAllCaps="false"
            android:background="@drawable/gradient"
            android:text="@string/logout"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>