<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addDropViewModel"
            type="com.aldar.studentportal.ui.studentPortal.addDrop.AddDropViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/standarize_spacing"
            android:layout_marginTop="@dimen/medium_margin"
            android:contentDescription="@string/image"
            android:src="@drawable/back_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/add_drop"
            android:textColor="@color/gray_black"
            android:textSize="@dimen/large_text_size"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/check"
            android:textColor="@color/gray_black"
            android:textSize="@dimen/large_text_size"
            android:padding="@dimen/text_gap"
            android:layout_marginEnd="@dimen/standarize_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/header"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/standarize_spacing"
            android:layout_marginEnd="@dimen/standarize_spacing"
            android:padding="@dimen/medium_margin"
            android:background="@drawable/gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_arrow">

            <TextView
                android:id="@+id/student_information"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_margin"
                android:fontFamily="@font/opensans_semibold"
                android:textSize="@dimen/medium_text_size"
                android:gravity="center|start"
                android:text="@string/student_info"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/id"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_below="@+id/student_information"
                android:text="@string/id"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/id"
                android:layout_below="@+id/student_information"
                android:maxLines="1"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text=""
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/student_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_student_id"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/student_name"
                android:layout_below="@id/tv_student_id"
                android:maxLines="1"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text=""
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/programe"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_student_name"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/program"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_programe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/programe"
                android:layout_below="@id/tv_student_name"
                android:maxLines="1"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text=""
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/standarize_spacing"
                android:layout_below="@+id/tv_programe"
                android:layout_centerVertical="true"
                android:text="@string/select_semester"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinner_semester"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn"
                android:layout_toEndOf="@id/search"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_below="@+id/tv_programe"
                android:backgroundTint="@color/gray_black"
                android:gravity="center"
                android:textColor="@color/white" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/standarize_spacing"
            android:background="@drawable/login_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">


            <LinearLayout
                android:id="@+id/check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standarize_spacing"
                android:layout_marginEnd="@dimen/standarize_spacing"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register_course"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn"
                    android:layout_weight="1"
                    android:background="@drawable/gradient"
                    android:gravity="center"
                    android:text="@string/register_course"
                    android:textSize="@dimen/medium_text"
                    android:textAllCaps="false"
                    android:textColor="@color/screen_color" />

                <Button
                    android:id="@+id/btn_available_course"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:background="@drawable/round_background"
                    android:gravity="center"
                    android:textSize="@dimen/medium_text"
                    android:text="@string/available_course"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_black" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check"
                android:layout_marginStart="@dimen/standarize_spacing"
                android:layout_marginEnd="@dimen/standarize_spacing"/>

        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorPrimary"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility="@{addDropViewModel.progressBar}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>